--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+   <div class = "placeholder">
+	   <div class=" box box1">3</div>
+	   <div class=" box box2">1</div>
+	   <div class=" box box3">2</div>
+   </div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
