--- a/main.html
+++ b/main.html
@@ -8,7 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <div class = "placeholder">
+   <div class = "holder">
+	   <div class=" box box1">3</div>
+	   <div class=" box box1">3</div>
+	   <div class=" box box1">3</div>
+	   <div class=" box box1">3</div>
+	   <div class=" box box1">3</div>
+	   <div class=" box box1">3</div>
+	   <div class=" box box1">3</div>
 	   <div class=" box box1">3</div>
 	   <div class=" box box2">1</div>
 	   <div class=" box box3">2</div>
